# reinforce_learning

./: .gitignore  CMakeLists.txt  main.cpp
data/: best_action_of0.000000.csv  best_action_of0.100000.csv  best_action_of0.200000.csv  best_action_of0.500000.csv  s_policy.txt  s_truncated.txt  s_value.txt  state_value_of0.000000.csv  state_value_of0.100000.csv  state_value_of0.200000.csv  state_value_of0.500000.csv  statevalues.txt
data/0.500000/: visit_count_100.csv  visit_count_1000.csv  visit_count_10000.csv  visit_count_100000.csv  visit_count_1000000.csv
data/1/: visit_count_100.csv  visit_count_1000.csv  visit_count_10000.csv  visit_count_1000000.csv
include/: include.h
plot/: grid_world.py  plot_converge.py  plot_iteration_times.py  plot_statevalue.py  plot_steps.py  test.py
py/: BGD.py  GD.py
py/Qlearning/: Q-learning.py
py/hw4/: DQN.py  TD-Linear.py  grid_env.py
src/: homework1.cpp  homework2.cpp
